<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Master">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_getcatalogs"
        android:icon="@drawable/ic_get_app_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_getcatalogs"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_gps"
        android:icon="@drawable/ic_gps_fixed_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_gps"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_sync"
        android:icon="@drawable/ic_sync_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_sync"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh_white_24dp"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />
</menu>
