<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10sp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingEnd="4sp"
            android:paddingStart="0sp"
            android:text="@string/FormVisitBusiness"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize" />

        <TextView
            android:id="@+id/VisitasBusiness"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10sp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingEnd="4sp"
            android:paddingStart="0sp"
            android:text="@string/FormVisitStreet"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize" />

        <TextView
            android:id="@+id/VisitasStreet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10sp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingEnd="4sp"
            android:paddingStart="0sp"
            android:text="@string/FormVisitLatitud"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize" />

        <TextView
            android:id="@+id/VisitasLatitud"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10sp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingEnd="4sp"
            android:paddingStart="0sp"
            android:text="@string/FormVisitLongitud"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize" />

        <TextView
            android:id="@+id/VisitasLongitud"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColor="@color/white"
            android:textSize="@dimen/textSize" />
    </LinearLayout>

</LinearLayout>