<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/container_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/container_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <ImageView
                    android:id="@+id/Login_Logo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/Login_Logo_Descripcion"
                    android:scaleType="fitCenter"
                    android:src="@drawable/logoroshfrans" />

            </RelativeLayout>

            <ProgressBar
                android:id="@+id/Login_Progress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:textColor="@color/white"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/Login_Form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <EditText
                    android:id="@+id/Login_Usuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Login_Usuario"
                    android:imeOptions="actionNext"
                    android:inputType="textNoSuggestions"
                    android:nextFocusDown="@+id/Login_Contrasenia"
                    android:textColor="@color/white"
                    android:textColorHint="@color/pearl"
                    android:textSize="@dimen/textSize" />

                <EditText
                    android:id="@+id/Login_Contrasenia"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Login_Contrasenia"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/Login_Entrar"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:textColorHint="@color/pearl"
                    android:textSize="@dimen/textSize" />

                <Button
                    android:id="@+id/Login_Entrar"
                    style="?android:textAppearanceMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@color/red"
                    android:text="@string/Login_Entrar"
                    android:textColor="@color/textColorPrimary"
                    android:textSize="@dimen/textSize"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <ImageView
            android:id="@+id/Login_Logo2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:contentDescription="@string/Login_Logo_Descripcion"
            android:scaleType="fitCenter"
            android:src="@drawable/logotargetpro" />

    </RelativeLayout>

</RelativeLayout>
